--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -24,7 +24,7 @@
         </form>
       {{/if}}
 
-      <h4> IP Port Status Creator</h4>
+      <h4> IP Port Status Protocol</h4>
       <form class="updateServers" method="post">
 <!--        <button class="submit"> /!-->
         <input type="submit" value="Update!">
@@ -82,6 +82,6 @@
     </button>
     {{/if}}
 
-    <span class="text"><strong>{{ip}} - {{port}}</strong> - {{status}} - {{username}} - {{test}}</span>
+    <span class="text"><strong>{{ip}} - {{port}}</strong> - {{status}} </span>
   </li>
 </template>
