--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -6,12 +6,12 @@
   <div class="container">
     <header>
       <h1>List of DP&NM Servers ({{onlineServers}} online)</h1>
-
+<!--
       <label class="hide-offline">
         <input type="checkbox" checked="{{hideOffline}}" />
         Hide Offline Servers
       </label>
-
+/!-->
       {{> loginButtons}}
 
       {{#if currentUser}}
@@ -24,7 +24,7 @@
         </form>
       {{/if}}
 
-      <h4> IP Port Status Service</h4>
+      <h4> IP Port Status Service(TCP)</h4>
       <form class="updateServers" method="post">
 <!--        <button class="submit"> /!-->
         <input type="submit" value="Update!">
@@ -39,43 +39,11 @@
     </ul>
   </div>
 
-<!--
-  <script src="ping.js"></script>
-    <script>
-    var do_ping = function() {
-        ping(document.getElementById('pingurl').value).then(function(delta) {
-            alert(delta);
-        }).catch(function(error) {
-            alert(String(error));
-        });
-    };
-    </script>
-
-    <script src="dpnm.js">
-
-
-  <input id='pingurl' type='text' value='http://google.ca'/>
-  <button onclick='do_ping()'>Ping</button>
-
-/!-->
 
 </body>
 
 <template name="task">
-  <li class="{{#if checked}}checked{{/if}} {{#if private}}private{{/if}}">
-    <button class="delete">&times;</button>
-
-    <input type="checkbox" checked="{{checked}}" class="toggle-checked" />
-
-    {{#if isOwner}}
-    <button class="toggle-private">
-      {{#if private}}
-        Private
-      {{else}}
-        Public
-      {{/if}}
-    </button>
-    {{/if}}
+  <li>
 
     <span class="text"><strong>{{ip}} - {{port}}</strong> - {{status}} - {{service}} </span>
   </li>
