--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -44,7 +44,7 @@
 
 <template name="task">
   <li>
-
+    <button class="delete">&times;</button>
     <span class="text"><strong>{{ip}} - {{port}}</strong> - {{status}} - {{service}} </span>
   </li>
 </template>
