--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -31,6 +31,7 @@
             <th>Port</th>
             <th>Status</th>
             <th>Service (TCP)</th>
+            <th>Delete</th>
           </tr>
         </table>
       </h4>
@@ -55,10 +56,10 @@
 
 <template name="task">
   <table style="width:100%" class="listing">
-        <td><strong>{{ip}}</strong></td>
-        <td><strong>{{port}}</strong></td>
-        <td>{{status}}</td>
-        <td>{{service}}</td>
+        <td align="center"><strong>{{ip}}</strong></td>
+        <td align="center"><strong>{{port}}</strong></td>
+        <td align="center">{{status}}</td>
+        <td align="center">{{service}}</td>
         <button class="delete">&times;</button>
   </table>
 <!--
