--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -60,7 +60,7 @@
         <td align="center"><strong>{{port}}</strong></td>
         <td align="center">{{status}}</td>
         <td align="center">{{service}}</td>
-        <button class="delete">&times;</button>
+        <button class="delete" align="center">&times;</button>
   </table>
 <!--
   <li>
