--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -47,6 +47,9 @@
         {{> task}}
       {{/each}}
     </ul>
+    <img alt="100x100" style="width: 100%" src="green_light_online.png">
+    <img alt="100x100" style="width: 100%" src="public/green_light_online.png">
+
   </div>
 
 
