--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -22,6 +22,13 @@
           <input type="submit" value="Submit">
           </button>
         </form>
+
+        <form class="change-email" method="post">
+          <input type="text" name="oldEmail" placeholder="Type your old email"/><br>
+          <input type="text" name="newEmail" placeholder="Type your new email"/><br>
+          <button class="submit">
+            <input type="submit" value="Change Email">
+          </button>
       {{/if}}
 
       <h4>
@@ -47,8 +54,7 @@
         {{> task}}
       {{/each}}
     </ul>
-    <img alt="100x100" style="width: 100%" src="green_light_online.png">
-    <img alt="100x100" style="width: 100%" src="public/green_light_online.png">
+    <img alt="16x16" style="width: 100%" src="green_light_online.png">
 
   </div>
 
