--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -23,12 +23,15 @@
           </button>
         </form>
 
+
+        <h3><br>Change email</h3>
         <form class="change-email" method="post">
           <input type="text" name="oldEmail" placeholder="Type your old email"/><br>
           <input type="text" name="newEmail" placeholder="Type your new email"/><br>
           <button class="submit">
             <input type="submit" value="Change Email">
           </button>
+        </form>
       {{/if}}
 
       <h4>
@@ -55,6 +58,7 @@
       {{/each}}
     </ul>
     <img alt="16x16" style="width: 100%" src="green_light_online.png">
+    <img alt="16x16" style="width: 100%" src="red_light_offline.png">
 
   </div>
 
