--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -41,7 +41,7 @@
             <th>Port</th>
             <th>Status</th>
             <th>Service (TCP)</th>
-            <th>Delete</th>
+<!--            <th>Delete</th> /!-->
           </tr>
         </table>
       </h4>
