Done coding, not done cleaning up

--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -26,7 +26,7 @@
 
         <h3><br>Change email</h3>
         <form class="change-email" method="post">
-          <input type="text" name="oldEmail" placeholder="Type your old email"/><br>
+          <input type="text" name="oldEmail" placeholder="Type your old email for verification"/><br>
           <input type="text" name="newEmail" placeholder="Type your new email"/><br>
           <button class="submit">
             <input type="submit" value="Change Email">
