--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -6,7 +6,7 @@
   <div class="container">
     <header>
       <h1>List of DP&NM Servers ({{onlineServers}} online)</h1>
-<!--
+<!--    Not complete
       <label class="hide-offline">
         <input type="checkbox" checked="{{hideOffline}}" />
         Hide Offline Servers
@@ -46,9 +46,7 @@
         </table>
       </h4>
       <form class="updateServers" method="post">
-<!--        <button class="submit"> /!-->
         <input type="submit" value="Update!">
-<!--      </button> /!-->
     </form>
     </header>
 
@@ -77,9 +75,4 @@
         <td align="center">{{service}}</td>
         <button class="delete" align="center">&times;</button>
   </table>
-<!--
-  <li>
-    <button class="delete">&times;</button>
-    <span class="text"><strong>{{ip}} - {{port}}</strong> - {{status}} - {{service}} </span>
-  </li> /!-->
 </template>
