minor, just updating

--- a/dpnm/dpnm.html
+++ b/dpnm/dpnm.html
@@ -6,7 +6,7 @@
   <div class="container">
     <header>
       <h1>List of DP&NM Servers ({{onlineServers}} online)</h1>
-<!--    Not complete
+<!--    Not complete?
       <label class="hide-offline">
         <input type="checkbox" checked="{{hideOffline}}" />
         Hide Offline Servers
